query-compiler/query-compiler/tests/snapshots/queries__queries@aggregate.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 58
expression: pretty
input_file: query-compiler/query-compiler/tests/data/aggregate.json
snapshot_kind: text
---
dataMap
   _count: 
      id: Int [_count.id]
      email: Int [_count.email]
      _all: Int [_count._all]
unique (query «SELECT COUNT("id") AS "_count.id", COUNT("email") AS
               "_count.email", COUNT(*) AS "_count._all" FROM (SELECT
               "public"."User"."id", "public"."User"."email" FROM
               "public"."User" WHERE "public"."User"."email"::text LIKE $1
               OFFSET $2) AS "sub"»
        params [const(String("%prisma.io%")), const(BigInt(0))])
