query-compiler/query-compiler/tests/snapshots/queries__queries@create-default-now.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/create-default-now.json
---
unique (query «INSERT INTO "public"."UserWithDate" ("email","createdAt") VALUES
               ($1,$2) RETURNING "public"."UserWithDate"."id",
               "public"."UserWithDate"."email",
               "public"."UserWithDate"."createdAt"»
        params [const(String("user.1@prisma.io")), now()])
