query-compiler/query-compiler/tests/snapshots/queries__queries@create-many-and-return.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/create-many-and-return.json
---
dataMap {
    id: Int (id)
    email: String (email)
    role: Enum<Role> (role)
}
enums {
    Role: {
        admin: ADMIN
        user: USER
    }
}
query «INSERT INTO "public"."User" ("email","role") VALUES ($1,CAST($2::text AS
       "public"."Role")), ($3,CAST($4::text AS "public"."Role")) RETURNING
       "public"."User"."id", "public"."User"."email",
       "public"."User"."role"::text»
params [const(String("user.1737556028164@prisma.io")), const(String("user")),
        const(String("user.1737556028165@prisma.io")), const(String("user"))]
