query-compiler/query-compiler/tests/snapshots/queries__queries@create-nested-connect.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 76
expression: pretty
input_file: query-compiler/query-compiler/tests/data/create-nested-connect.json
snapshot_kind: text
---
transaction
   dataMap {
       id: Int (id)
       email: String (email)
       role: Enum<Role> (role)
       posts (from @nested$posts): {
           id: Int (id)
           title: String (title)
           userId: Int (userId)
       }
   }
   enums {
       Role: {
           admin: ADMIN
           user: USER
       }
   }
   let 0 = unique (query «INSERT INTO "public"."User" ("email","role") VALUES
                          ($1,CAST($2::text AS "public"."Role")) RETURNING
                          "public"."User"."id"»
                   params [const(String("user.1737556028164@prisma.io")),
                           const(String("user"))])
   in let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RELATED_RECORD");
          0$id = mapField id (get 0)
      in let 1 = execute «UPDATE "public"."Post" SET "userId" = $1 WHERE
                          ("public"."Post"."id" = $2 OR "public"."Post"."id" =
                          $3 OR "public"."Post"."id" = $4)»
                 params [var(0$id as Int), const(BigInt(8)), const(BigInt(9)),
                         const(BigInt(10))]
         in validate (get 1)
            [ affectedRowCountEq 3
            ] orRaise "INCOMPLETE_CONNECT_OUTPUT";
            ();
      let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RECORD");
          0$id = mapField id (get 0)
      in rawNestedReadUnique (query «SELECT "public"."User"."id",
                                     "public"."User"."email",
                                     "public"."User"."role"::text FROM
                                     "public"."User" WHERE "public"."User"."id"
                                     = $1 LIMIT $2 OFFSET $3»
                              params [var(0$id as Int), const(BigInt(1)),
                                      const(BigInt(0))]
                              fields {
                                  id: 0
                                  email: 1
                                  role: 2
                              }
                              relations [posts on left.0 = right.2 many (query
                                                                         «SELECT
                                                                          "public"."Post"."id",
                                                                          "public"."Post"."title",
                                                                          "public"."Post"."userId"
                                                                          FROM
                                                                          "public"."Post"
                                                                          WHERE
                                                                          "public"."Post"."userId"
                                                                          = $1
                                                                          OFFSET
                                                                          $2»
                                                                         params [var(@parent$id as Int),
                                                                                 const(BigInt(0))]
                                                                         fields {
                                                                             id: 0
                                                                             title: 1
                                                                             userId: 2
                                                                         })])
         enums {
             Role: {
                 admin: ADMIN
                 user: USER
             }
         }
