query-compiler/query-compiler/tests/snapshots/queries__queries@create-nested-create.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 76
expression: pretty
input_file: query-compiler/query-compiler/tests/data/create-nested-create.json
snapshot_kind: text
---
transaction
   dataMap {
       id: Int (id)
       email: String (email)
       role: Enum<Role> (role)
       posts (from @nested$posts): {
           id: Int (id)
           title: String (title)
           userId: Int (userId)
       }
   }
   enums {
       Role: {
           admin: ADMIN
           user: USER
       }
   }
   let 0 = unique (query «INSERT INTO "public"."User" ("email","role") VALUES
                          ($1,CAST($2::text AS "public"."Role")) RETURNING
                          "public"."User"."id"»
                   params [const(String("user.1737556027349@prisma.io")),
                           const(String("user"))])
   in let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RELATED_RECORD");
          0$id = mapField id (get 0)
      in execute «INSERT INTO "public"."Post" ("title","userId") VALUES ($1,$2),
                  ($3,$4)»
         params [const(String("How to make an omelette")), var(0$id as Int),
                 const(String("How to eat an omelette")), var(0$id as Int)];
      let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RECORD");
          0$id = mapField id (get 0)
      in rawNestedReadUnique (query «SELECT "public"."User"."id",
                                     "public"."User"."email",
                                     "public"."User"."role"::text FROM
                                     "public"."User" WHERE "public"."User"."id"
                                     = $1 LIMIT $2 OFFSET $3»
                              params [var(0$id as Int), const(BigInt(1)),
                                      const(BigInt(0))]
                              fields {
                                  id: id
                                  email: email
                                  role: role
                              }
                              relations [posts on left.id = right.userId many (query
                                                                               «SELECT
                                                                                "public"."Post"."id",
                                                                                "public"."Post"."title",
                                                                                "public"."Post"."userId"
                                                                                FROM
                                                                                "public"."Post"
                                                                                WHERE
                                                                                "public"."Post"."userId"
                                                                                =
                                                                                $1
                                                                                OFFSET
                                                                                $2»
                                                                               params [var(@parent$id as Int),
                                                                                       const(BigInt(0))]
                                                                               fields {
                                                                                   id: id
                                                                                   title: title
                                                                                   userId: userId
                                                                               })])
         enums {
             Role: {
                 admin: ADMIN
                 user: USER
             }
         }
