query-compiler/query-compiler/tests/snapshots/queries__queries@create-with-generators.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 49
expression: pretty
input_file: query-compiler/query-compiler/tests/data/create-with-generators.json
snapshot_kind: text
---
dataMap
Object { fields: {"id": Value { db_name: "id", result_type: String }, "email": Value { db_name: "email", result_type: String }, "createdAt": Value { db_name: "createdAt", result_type: Date }} }
unique (query «INSERT INTO "public"."UserWithGenerators"
               ("id","email","createdAt") VALUES ($1,$2,$3) RETURNING
               "public"."UserWithGenerators"."id",
               "public"."UserWithGenerators"."email",
               "public"."UserWithGenerators"."createdAt"»
        params [uuid(const(Int(7))), const(String("user.1@prisma.io")), now()])
