query-compiler/query-compiler/tests/snapshots/queries__queries@delete-many-limit.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/delete-many-limit.json
---
dataMap affectedRows
execute «DELETE FROM "public"."Post" WHERE "public"."Post"."title" = $1»
params [const(String("whatever"))]
